--- a/diode/sdfv.html
+++ b/diode/sdfv.html
@@ -18,6 +18,7 @@
     <script src="./webclient/renderer_elements.js"></script>
     <script src="./webclient/context_menu.js"></script>
     <script src="./webclient/sdfg_utils.js"></script>
+    <script src="./webclient/overlay_manager.js"></script>
     <script src="./webclient/renderer.js"></script>
 
 </head>
